--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
             const password = document.getElementById('password').value;
 
             if (username === 'prueba' && password === '123') {
-                window.location.href = 'inside.html'; 
+                window.location.href = 'inicio.html'; 
             } else {
                 alert('Usuario o contraseña incorrectos.');
             }
