--- a/login.html
+++ b/login.html
@@ -69,8 +69,8 @@
             </div>
         </form>
         <div class="footer-links">
-            <a href="#">¿Olvidaste tu contraseña?</a>
-            <a href="#">Registrarse</a>
+            <a id="forgot-password" href="#">¿Olvidaste tu contraseña?</a>
+            <a id="registro" href="registro.html">Registrarse</a>
         </div>
     </div>
 
