--- a/login.html
+++ b/login.html
@@ -75,12 +75,40 @@
     </div>
 
     <script>
+        function base64UrlEncode(obj) {
+                const stringified = JSON.stringify(obj);
+                const base64 = btoa(stringified);
+                return base64.replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
+        }
+
+        function createToken(user) {
+            // Comentamos para no tener esto actualmente funcional
+            const header = {
+                "alg": "HS256",
+                "typ": "JWT"
+            };
+
+            const payload = {
+                "usr": user,
+                "iat": Math.floor(Date.now() / 1000) // issued at
+
+            };
+
+            const encodedHeader = base64UrlEncode(header);
+            const encodedPayload = base64UrlEncode(payload);
+
+            const signature = "firma_secreta_simulada_xyz123";
+
+            const jwt = `${encodedHeader}.${encodedPayload}.${signature}`;
+        }
+
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault(); 
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
             if (username === 'prueba' && password === '123') {
+                sessionStorage.token = createToken(username);
                 window.location.href = 'inicio.html'; 
             } else {
                 alert('Usuario o contraseña incorrectos.');
