jwt y registro tokenizado

--- a/login.html
+++ b/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="utils.js"></script>
+    <script src="auth-utils.js"></script>
     <title>Login</title>
     <style>
         body {
@@ -75,40 +77,14 @@
     </div>
 
     <script>
-        function base64UrlEncode(obj) {
-                const stringified = JSON.stringify(obj);
-                const base64 = btoa(stringified);
-                return base64.replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
-        }
-
-        function createToken(user) {
-            // Comentamos para no tener esto actualmente funcional
-            const header = {
-                "alg": "HS256",
-                "typ": "JWT"
-            };
-
-            const payload = {
-                "usr": user,
-                "iat": Math.floor(Date.now() / 1000) // issued at
-
-            };
-
-            const encodedHeader = base64UrlEncode(header);
-            const encodedPayload = base64UrlEncode(payload);
-
-            const signature = "firma_secreta_simulada_xyz123";
-
-            const jwt = `${encodedHeader}.${encodedPayload}.${signature}`;
-        }
-
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault(); 
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
             if (username === 'prueba' && password === '123') {
-                sessionStorage.token = createToken(username);
+                sessionStorage.setItem('token', createToken(username));
+                console.log("sessionStorage actualizado correctamente: ", sessionStorage.getItem('token'));
                 window.location.href = 'inicio.html'; 
             } else {
                 alert('Usuario o contraseña incorrectos.');
